@@ -36,6 +36,7 @@ Version 1.4.6 - CVS
     Bosman.
   - Fixed address book file and database backend error messages broken by
     CAN-2005-1769 patches.
+  - Fixed compose form redirection in spamcop plugin.
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
@@ -156,7 +157,7 @@ Version 1.4.5 Release Candidate 1 - 15 June 2005
     allows to encode user's information with provided encryption key (set in
     2. Server settings -> B. Update SMTP / Sendmail settings). Second option
     allows to disable authenticated user part in Received: header, when user
-    can't force used email address. It is set in 4. General Options ->
+    can't forge used email address. It is set in 4. General Options ->
     9. Allow editing of identity (#847107).
   - Fix get_identities() for the case where the user has not set an email
     address: use the fallback $username@$domain that's used in compose aswell.
